DWA8 final submission

--- a/DWA8/index.html
+++ b/DWA8/index.html
@@ -7,17 +7,17 @@
 
     <title>Book Connect</title>
 
-    <link rel="apple-touch-icon" sizes="180x180" href="/DWA7/meta/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/DWA7/meta/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/DWA7/meta/favicon-16x16.png">
-    <link rel="manifest" href="/DWA7/meta/manifest.json">
-    <link rel="mask-icon" href="/DWA7/meta/safari-pinned-tab.svg" color="#0096ff">
+    <link rel="apple-touch-icon" sizes="180x180" href="/DWA8/meta/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/DWA8/meta/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/DWA8/meta/favicon-16x16.png">
+    <link rel="manifest" href="/DWA8/meta/manifest.json">
+    <link rel="mask-icon" href="/DWA8/meta/safari-pinned-tab.svg" color="#0096ff">
     <link rel="shortcut icon" href="/DWA7/meta/favicon.ico">
     <meta name="msapplication-TileColor" content="#0a0a14">
     <meta name="msapplication-config" content="DWA6\meta\browserconfig.xml">
     <meta name="theme-color" content="#0a0a14">
 
-    <link rel="stylesheet" href="/DWA7/styles.css" />
+    <link rel="stylesheet" href="/DWA8/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 
@@ -26,8 +26,9 @@
       rel="stylesheet"
     />
 
-    <script src="/DWA7/js/scripts.js" defer type="module"></script>
-    <!-- <script src="/js/data.js"></script> -->
+    <script src="/DWA8/js/scripts.js" defer type="module"></script>
+    <script src="/DWA8/js/data.js" defer type="module"></script>
+    <script src="/DWA8/js/functions.js" defer type="module"></script>
   </head>
   <body>
 
