DWA11 submission, DWA10 reset msg

--- a/DWA11/index.html
+++ b/DWA11/index.html
@@ -10,7 +10,7 @@
     <script type="module" src="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.4.0/dist/shoelace-autoloader.js"></script>
     
     <link rel="stylesheet" href="/DWA10/stylesheet.css" type="text/css">
-    <script src="/DWA10/scripts.js" defer type="module"></script>
+    <script src="/DWA11/js/scripts.js" defer type="module"></script>
 </head>
 <body>
     <header>
