--- a/DWA14/index.html
+++ b/DWA14/index.html
@@ -14,7 +14,7 @@
     <tally-header></tally-header>
     <p id="reset-message" hidden="true" style="text-align: center;">The counter has been reset</p>
     <main>
-        <input readonly value="0" data-key="number"></input>
+        <input id="counter-screen" readonly value="0" data-key="number"></input>
         <plus-button data-key="add"></plus-button>
         <minus-button data-key="subtract"></minus-button>
         <reset-button data-key="reset"></reset-button>
